Fix header icon appearance on mobile, dark

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -68,12 +68,16 @@ header {
 
 .header-icon {
     display: block;
+    flex: none;
     background: url("/assets/images/app-icon.svg") no-repeat 50% 50%;
     background-size: 100%;
     border-radius: 15px;
     width: 84px;
     height: 84px;
-    margin-right: 30px;
+}
+
+.header-info {
+    margin-left: 30px;
 }
 
 .header-info h1 {
